--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,35 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+
+    <!-- About Зозуля Елена -->
+    <section class="about">
+      <div class="about__container container">
+        <p class="about__uppertitle">tradition and love</p>
+        <h2 class="about__title">how it’s made?</h2>
+        <img class="about__img"
+            srcset="
+            .\images\about\cow_sm@1x.jpg 279w,
+            .\images\about\cow_md@1x.jpg 330w,
+            .\images\about\cow_lg@1x.jpg 490w,
+            .\images\about\cow_sm@2x.jpg 558w,
+            .\images\about\cow_md@2x.jpg 660w,
+            .\images\about\cow_lg@2x.jpg 980w
+            " 
+            sizes="(min-width: 1200px) 490px,
+                    (min-width: 768px) 330px,
+                    (min-width: 480px) 279px, 100vw"
+            src="./images/about/cow_sm@1x.jpg"
+            alt="cow"
+            width="279" 
+            height="278" 
+            loading="lazy"/>
+        <p class="about__descriptions">Ice is a place where you will become not only a little happier, but also healthier. Health is the main value for us, and
+      we follow it when creating our handmade desserts.</p>
+        <p class="about__product">We use traditional recipes and 100% natural ingredients. Our products are so natural that they can be given to children
+      from the age of three years. Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23 milkshakes.</p>
+        <button class="about__btn btn" type="button" data-modal-open>Read more</button>
+      </div>
+    </section>
   </body>
 </html>
