--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
         <p class="about__uppertitle">tradition and love</p>
         <h2 class="about__title">how it’s made?</h2>
      
-        <svg>
+        <!-- <svg>
           <circle r="140" cx="20" cy="241" fill="" stroke="#2a2a2a" stroke-width="4" />
-        </svg>
+        </svg> -->
         <img class="about__img"
             srcset="
             .\images\about\cow_sm@1x.jpg 279w,
