--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-
     <include src="./partials/button.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
@@ -20,5 +23,7 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="swiper.js"></script>
   </body>
 </html>
