Виправляє html/css
Видалє зайві фото
Видаляє кнопки в слайдері
Додає "alt" до фоток
Додає папку js та підключення через index.js

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,6 @@
 
     <include src="./partials/buy-now-modal.html"></include>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="swiper.js"></script>
+    <script src="./js/swiper-bundle-min.js"></script>
   </body>
 </html>
