--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
     <include src="./partials/buy-now-modal.html"></include>
     <include src="./partials/mobile-menu.html"></include>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="swiper.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="swiper.js"></script> -->
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
