--- a/src/index.html
+++ b/src/index.html
@@ -46,5 +46,6 @@
     <include src="./partials/buy-now-modal.html"></include>
 
     <script src="./js/swiper-bundle-min.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
