--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
     <include src="./partials/customer-reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+
     <include src="./partials/read-more.html"></include>
-
     <include src="./partials/about-product.html"></include>
-
     <include src="./partials/buy-now-modal.html"></include>
+    <include src="./partials/franchise.html"></include>
 
     <script src="./js/swiper-bundle-min.js"></script>
   </body>
