--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,8 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/read-more.html"></include>
 
+    <include src="./partials/locations.html"></include>
+
     <include src="./partials/about-product.html"></include>
 
     <include src="./partials/buy-now-modal.html"></include>
