--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/button.html"></include>
+    <!-- <include src="./partials/button.html"></include> -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
